# LOOP-ENGINEERING-KIT---COMPLETE-BUILD

./: CONTRIBUTING.md  LICENSE  README.md  pyproject.toml  requirements.txt
Patterns/01-retry-with-backoff/: retry_loop.py
Patterns/02-human-verification/: README.md
Patterns/05-cost-optimization/: cost_optimization.py
docs/: monitoring-guide.md  testing-guide.md
examples/: self_correction_loop.py
langgraph-templates/01-basic-agent-loop/: README.md
langgraph-templates/02-supervisor-pattern/: README.md  supervisor.py
langgraph-templates/03-reflection-loop/: reflection_loop.py
loop-engineering-kit/: CODE_OF_CONDUCT.md  LAUNCH.md  LICENSE
loop-engineering-kit/case-studies/: customer-support.md
loop-engineering-kit/checklists/: loop-design-checklist.md
loop-engineering-kit/docs/: what-is-loop-engineering.md
loop-engineering-kit/examples/: basic_retry_loop.py
loop-engineering-kit/langgraph-templates/01-basic-agent-loop/: agent_loop.py
loop-engineering-kit/langgraph-templates/03-reflection-loop/: README.md
loop-engineering-kit/loop_engineering_kit/: __init__.py  human_verification.py  self_correction.py  validation.py
loop-engineering-kit/patterns/02-human-verification/: human_verification.py
loop-engineering-kit/tests/: test_self_correction.py
loop_engineering_kit/: cost_optimization.py  retry.py
patterns/: Human-in-the-Loop  Retry with Exponential Backoff  Self-Correction Loop
patterns/01-retry-with-backoff/: README.md
patterns/03-self-correction/: self_correction_loop.py
patterns/04-validation-loop/: README.md
tests/: test_retry.py
(+3 files in other folders)
