[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loop-engineering-kit"
version = "0.1.0"
description = "Provider-neutral patterns for reliable iterative AI systems"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Loop Engineering Kit contributors"}]
keywords = ["ai", "agents", "loops", "langgraph", "reliability"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff>=0.5"]
langgraph = ["langgraph>=0.2"]

[tool.setuptools.packages.find]
include = ["loop_engineering_kit*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 110
target-version = "py310"
